Add ffmpeg compilation

--- a/build_system/CMakeLists.txt
+++ b/build_system/CMakeLists.txt
@@ -74,6 +74,7 @@ FetchContent_Declare(sdl_ttf
 )
 
 include(FreeImage)
+include(FFMpeg)
 
 FetchContent_MakeAvailable(sdl sdl_image sdl_ttf)
 
@@ -83,5 +84,10 @@ FetchContent_MakeAvailable(sdl sdl_image sdl_ttf)
 # Quick smoke test to ensure lib dependencies are properly built
 add_executable(smoke_test smoke.cpp)
 target_link_libraries(smoke_test
-  PRIVATE freeimage SDL3-shared SDL3_image-shared SDL3_ttf-shared
+  PRIVATE
+    ffmpeg
+    freeimage
+    SDL3-shared
+    SDL3_image-shared
+    SDL3_ttf-shared
 )
