Move ffmpeg to it own submodule
Also prevent cloning ffmpeg on every run

--- a/build_system/CMakeLists.txt
+++ b/build_system/CMakeLists.txt
@@ -74,11 +74,11 @@ FetchContent_Declare(sdl_ttf
 )
 
 include(FreeImage)
-include(FFMpeg)
 
 ## Vpinball
 
 add_subdirectory(dependencies/altsound)
+add_subdirectory(dependencies/ffmpeg)
 
 FetchContent_MakeAvailable(sdl sdl_image sdl_ttf)
 
