--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.cache
+.qt
 .project
 .classpath
 .gradle
@@ -13,7 +15,7 @@ fastlane/
 
 tmp
 
-CMakeLists.txt
+/CMakeLists.txt
 
 standalone/inc/wine/dlls/vbscript/parser.tab.h
 standalone/inc/wine/dlls/vbscript/parser.tab.c
