--- a/editor/src/gui/CMakeLists.txt
+++ b/editor/src/gui/CMakeLists.txt
@@ -1,15 +1,10 @@
-find_package(Qt6 REQUIRED
-  COMPONENTS Widgets
-)
-
-qt_standard_project_setup()
-
 qt_add_executable(editor
   main.cpp
   MainWindow.cpp
   dialogs/SettingsDialog.cpp
   widgets/PathEdit.cpp
 )
+
 qt_add_resources(editor icons
   PREFIX "/icons"
   BASE ./resources/icons/svgs/
@@ -18,5 +13,5 @@ qt_add_resources(editor icons
 )
 
 target_link_libraries(editor
-  PRIVATE Qt6::Widgets
+  PRIVATE vpin_adapter Qt6::Widgets
 )
