Build vpinball as library

--- a/editor/src/editor/CMakeLists.txt
+++ b/editor/src/editor/CMakeLists.txt
@@ -1,6 +1,6 @@
-qt_add_library(vpin_adapter STATIC
+qt_add_library(editor STATIC
   Editor.cpp
 )
 
-target_link_libraries(vpin_adapter PRIVATE Qt6::Core)
-target_include_directories(vpin_adapter INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(editor PRIVATE Qt6::Core PUBLIC adapter)
+target_include_directories(editor INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
