--- a/editor/src/editor/CMakeLists.txt
+++ b/editor/src/editor/CMakeLists.txt
@@ -3,5 +3,5 @@ qt_add_library(editor STATIC
   TableEdit.cpp
 )
 
-target_link_libraries(editor PRIVATE Qt6::Core PUBLIC adapter)
+target_link_libraries(editor PRIVATE Qt6::Core PUBLIC adapter::interface)
 target_include_directories(editor INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
