--- a/editor/src/gui/CMakeLists.txt
+++ b/editor/src/gui/CMakeLists.txt
@@ -2,6 +2,7 @@ qt_add_library(gui STATIC
   MainWindow.cpp
   dialogs/SettingsDialog.cpp
   dialogs/TableMetaDialog.cpp
+  dialogs/sizes.cpp
   widgets/PathEdit.cpp
 )
 
