Insert bumper elements into editor model

--- a/editor/src/editor/CMakeLists.txt
+++ b/editor/src/editor/CMakeLists.txt
@@ -1,8 +1,8 @@
 qt_add_library(editor STATIC
   Editor.cpp
-  PlayfieldElement.cpp
   TableEdit.cpp
 )
+add_subdirectory(playfield)
 
 target_link_libraries(editor PRIVATE Qt6::Core PUBLIC adapter::interface)
 target_include_directories(editor INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
