Decouple graphics items for playfield class
The goal is to let the playfield manage high level stuff (allowing
selection, canvas, ...) and move element details (position, edition) out
of it.

--- a/editor/src/gui/playfield/CMakeLists.txt
+++ b/editor/src/gui/playfield/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(gui PRIVATE
-  DragHandle.cpp
-  Playfield.cpp
   BumperItem.cpp
+  DragHandle.cpp
+  ItemFactory.cpp
+  Playfield.cpp
 )
