Move playfield graphics items implementation to their own directory

--- a/editor/src/gui/playfield/CMakeLists.txt
+++ b/editor/src/gui/playfield/CMakeLists.txt
@@ -1,7 +1,7 @@
 target_sources(gui PRIVATE
-  BumperItem.cpp
-  DragHandle.cpp
   ItemFactory.cpp
   Playfield.cpp
   PlayfieldGraphicsObject.cpp
 )
+
+add_subdirectory(items)
